<resources>
    <string name="app_name">Tell me, Random!</string>
    <string name="start">Start</string>
    <string name="write_your_name">Write your name</string>
    <string name="main_menu">Main Menu</string>
    <string name="yerkebulan">Yerkebulan</string>
    <string name="hello">Hello,</string>
    <string name="next">Next</string>
    <string name="categories">Categories</string>
    <string name="press_the_start_button_for_generating_random_movie_from_this_category">Press the \'\'Start\'\' \nbutton for generating\n random movie from this category</string>
    <string name="movie_info_forrest">Slow-witted Forrest Gump has never thought of himself as disadvantaged, and thanks to his supportive mother, he leads anything but a restricted life. Whether dominating on the gridiron as a college football star, fighting in Vietnam or captaining a shrimp boat, Forrest inspires people with his childlike optimism. But one person Forrest cares about most may be the most difficult to save -- his childhood love, the sweet but troubled Jenny.</string>
    <string name="movie_info">Movie info:</string>
    <string name="tag_line_forrest">Tag line: Life is like a box of chocolates...You never know what you\'re gonna get.</string>
    <string name="production_paramount_pictures">Production: Paramount Pictures</string>
    <string name="runtime_2h_22m">Runtime: 2h 22m</string>
    <string name="release_date_jul_6_1994">Release Date: Jul 6, 1994</string>
    <string name="genre_drama_comedy">Genre: Drama, Comedy</string>
    <string name="rating_pg_13">Rating: PG-13:</string>
    <string name="randomized_movie_is">Randomized movie is</string>
    <string name="forrest_gump">Forrest Gump</string>
    <string name="forrestgumpimage">ForrestGumpImage</string>
    <string name="comedy">Comedy</string>
    <string name="again">Again</string>
    <string name="aboutapptext">This app by Kambarov Yerkebulan.\n\n An application for those who cannot choose what to watch from a certain video category, which will randomly give you content from the category you selected.\nHappy viewing!</string>
    <string name="rating_r">Rating: R</string>
    <string name="runtime_1h_50m">Runtime: 1h 50m</string>
    <string name="release_date_may_25_2012">Release Date: May 25, 2012</string>
    <string name="description_intouchables">In Paris, the aristocratic and intellectual Philippe is a quadriplegic millionaire who is interviewing candidates for the position of his carer, with his red-haired secretary Magalie. Out of the blue, Driss cuts the line of candidates and brings a document from the Social Security and asks Phillipe to sign it to prove that he is seeking a job position so he can receive his unemployment benefit. Philippe challenges Driss, offering him a trial period of one month to gain experience helping him. Then Driss can decide whether he would like to stay with him or not. Driss accepts the challenge and moves to the mansion, changing the boring life of Phillipe and his employees.</string>
    <string name="rating_pg">Rating: PG</string>
    <string name="description_groundhogday">A weather man is reluctantly sent to cover a story about a weather forecasting \'\'rat\'\' (as he calls it). This is his fourth year on the story, and he makes no effort to hide his frustration. On awaking the \'following\' day he discovers that it\'s Groundhog Day again, and again, and again. First he uses this to his advantage, then comes the realisation that he is doomed to spend the rest of eternity in the same place, seeing the same people do the same thing EVERY day.</string>
    <string name="knives_out">Knives Out</string>
    <string name="genre_comedy_crime_drama">Genre: Comedy, Crime, Drama</string>
    <string name="runtime_2h_10m">Runtime: 2h 10m</string>
    <string name="description_knivesout">When renowned crime novelist Harlan Thrombey is found dead at his estate just after his 85th birthday, the inquisitive and debonair Detective Benoit Blanc is mysteriously enlisted to investigate. From Harlan\'s disfunctional family to his devoted staff, Blanc sifts through a web of red herrings and self-serving lies to uncover the truth behind Harlan\'s untimely death.</string>
    <string name="tagline_knivesout">Tagline: Everyone has a motive. No one has a clue. Hell, any of them could have done it. Nothing brings a family together like murder.</string>
    <string name="production_filmnation_ent">Production: FilmNation Ent.</string>
    <string name="home_alone">Home Alone</string>
    <string name="desc_homealone">When bratty 8-year-old Kevin McCallister acts out the night before a family trip to Paris, his mother makes him sleep in the attic. After the McCallisters mistakenly leave for the airport without Kevin, he awakens to an empty house and assumes his wish to have no family has come true. But his excitement sours when he realizes that two con men plan to rob the McCallister residence, and that he alone must protect the family home.</string>
    <string name="tagline_homealone">Tagline: When Kevin\'s family left for vacation, they forgot one minor detail: Kevin. But don\'t worry... He cooks. He cleans.</string>
    <string name="production_20th_century_fox">Production: 20th Century Fox</string>
    <string name="runtime_1h_42m">Runtime: 1h 42m</string>
    <string name="release_date_nov_16_1990">Release Date: Nov 16, 1990</string>
    <string name="genre_comedy_other">Genre: Comedy, Other</string>
    <string name="tagline_groundhogday">Tagline: He\'s having the day of his life...over and over again</string>
    <string name="production_columbia_pictures">Production: Columbia Pictures</string>
    <string name="runtime_1h_36m">Runtime: 1h 36m</string>
    <string name="release_date_feb_12_1993">Release Date: Feb 12, 1993</string>
    <string name="genre_comedy_romance">Genre: Comedy, Romance</string>
    <string name="groundhog_day">Groundhog Day</string>
    <string name="tagline_1_1">Tagline: Sometimes You Have to Reach Into Someone Else\'s World to Find Out What\'s Missing in Your Own</string>
    <string name="production_chaocorp_canal">Production: Chaocorp, Canal+</string>
    <string name="_1_1">1+1</string>
    <string name="biograph">Biograph</string>
    <string name="cartoon">Cartoon</string>
    <string name="anime">Anime</string>
    <string name="randomized_anime_is">Randomized anime is</string>
    <string name="year_2016">Year: 2016</string>
    <string name="desc_erased">29 year old Satoru Fujinuma is sent back in time 18 years to prevent the events leading to his mother\'s death, which began with a series of kidnappings in his 5th grade year.</string>
    <string name="series_12">Series: 12</string>
    <string name="type_series">Type: Series</string>
    <string name="production_a_1_pictures">Production: A-1 Pictures</string>
    <string name="genres_drama_fantasy_mystery_sci_fi">Genres: Drama, Fantasy, Mystery, Sci-Fi</string>
    <string name="erased">Erased</string>
    <string name="the_promised_neverland">The Promised Neverland</string>
    <string name="rating_r_17">Rating: R-17+</string>
    <string name="your_lie_in_april">Your Lie in April</string>
    <string name="desc_aprill">The story follows Arima Kousei, a skilled pianist. However, he hasn\'t played since he played for his mother who died a few years ago. One day Arima meets a brilliant violinist at the park. After their meeting she tries to guide Arima back into the world of music.</string>
    <string name="series_22">Series: 22</string>
    <string name="tagline_toystory">Tagline: The story of two partners discovering what they\'re made of.</string>
    <string name="desc_toystory">Woody, a good-hearted cowboy doll who belongs to a young boy named Andy (John Morris), sees his position as Andy\'s favorite toy jeopardized when his parents buy him a Buzz Lightyear action figure. Even worse, the arrogant Buzz thinks he\'s a real spaceman on a mission to return to his home planet. When Andy\'s family moves to a new house, Woody and Buzz must escape the clutches of maladjusted neighbor Sid Phillips and reunite with their boy.</string>
    <string name="decs_coco">Despite his family\'s baffling generations-old ban on music, Miguel dreams of becoming an accomplished musician like his idol, Ernesto de la Cruz. Desperate to prove his talent, Miguel finds himself in the stunning and colorful Land of the Dead following a mysterious chain of events. Along the way, he meets charming trickster Hector, and together, they set off on an extraordinary journey to unlock the real story behind Miguel\'s family history.</string>
    <string name="tagline_coco">Tagline: The celebration of a lifetime</string>
    <string name="tagline_walle">After 700 years of doing what he was built for - he\'ll discover what he\'s meant for.</string>
    <string name="desc_walle">WALL-E, short for Waste Allocation Load Lifter Earth-class, is the last robot left on Earth. He spends his days tidying up the planet, one piece of garbage at a time. But during 700 years, WALL-E has developed a personality, and he\'s more than a little lonely. Then he spots EVE (Elissa Knight), a sleek and shapely probe sent back to Earth on a scanning mission. Smitten WALL-E embarks on his greatest adventure yet when he follows EVE across the galaxy.</string>
    <string name="desc_fordvferrari">As Enzo Ferrari\'s fast Rosso-Corsa racing cars dominate the mid-1960s motorsport world, the American car designer, Carroll Shelby, is forced to retire after winning the demanding 1959 \'24 Hours of Le Mans\' endurance race. But, before long, an unexpected proposition by the Vice President of Henry Ford\'s motor company, Lee Iacocca, will offer an opportunity to beat the Italians at their own game.  Can Shelby and Miles break Ferrari\'s streak?</string>
    <string name="tagline_fvf">Tagline: They took the American dream for a ride.</string>
    <string name="tagline_slist">Tagline: Whoever saves one Life, Saves the World entire</string>
    <string name="desc_slist">Oskar Schindler is a vain and greedy German businessman who becomes an unlikely humanitarian amid the barbaric German Nazi reign when he feels compelled to turn his factory into a refuge for Jews. Based on the true story of Oskar Schindler who managed to save about 1100 Jews from being gassed at the Auschwitz concentration camp, it is a testament to the good in all of us.</string>
    <string name="desc_neverland">At Grace Field House, life couldn\'t be better for the orphans. Though they have no parents, together with the other kids and a kind \'\'Mama\'\' who cares for them, they form one big, happy family. No child is ever overlooked, especially since they are all adopted by the age of 12. Their daily lives involve rigorous tests, but afterwards, they are allowed to play outside. There is only one rule they must obey: do not leave the orphanage. But one day, two top-scoring orphans, Emma and Norman, venture past the gate and unearth the harrowing secret behind their entire existence. Utilizing their quick-wittedness, the children must work together to somehow change their predetermined fate</string>
    <string name="production_cloverworks">Production: CloverWorks</string>
    <string name="genres_drama_fantasy_psychology_mystery_sci_fi">Genres: Drama, Fantasy, Psychology, Mystery, Sci-Fi</string>
    <string name="year_2019">Year: 2019</string>
    <string name="back_to_categories">Back to categories</string>
</resources>