<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"

    tools:context=".RandomizedBiography1">

    <TextView
        android:id="@+id/textRandomized"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/randomized_movie_is" />

    <TextView
        android:id="@+id/nameOfVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textRandomized"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="Ford v Ferrari"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/VideoImage"
        android:layout_width="160dp"
        android:layout_height="200dp"
        android:layout_below="@id/nameOfVideo"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/forrestgumpimage"
        android:src="@drawable/fordvferrari" />

    <TextView
        android:id="@+id/txtMovieInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameOfVideo"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/VideoImage"
        android:text="@string/movie_info"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMovieInfo"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/VideoImage"
        android:text="@string/rating_pg_13" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMovieInfo"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@id/VideoImage"
        android:text="Genre: History, Biography " />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMovieInfo"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@id/VideoImage"
        android:text="Release: Nov 15, 2019" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMovieInfo"
        android:layout_marginTop="70dp"
        android:layout_toEndOf="@id/VideoImage"
        android:text="Runtime: 2h 32m" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMovieInfo"
        android:layout_marginTop="90dp"
        android:layout_toEndOf="@id/VideoImage"
        android:text="Production: 20th Century Fox" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMovieInfo"
        android:layout_marginTop="130dp"
        android:layout_toEndOf="@id/VideoImage"
        android:text="@string/tagline_fvf" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/VideoImage"
        android:layout_marginTop="10dp"
        android:text="@string/desc_fordvferrari" />

    <Button
        android:id="@+id/againButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/again" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/againButton"
        android:background="@drawable/buttonstyle"
        android:text="@string/back_to_categories" />
</RelativeLayout>